Additions :

Improvements :

* Fixed some compiler warnings emitted by GCC 4.4.4.

* IECoreMaya.StringParameterUI now supports glob style expressions in the Objects->Select context menu item.

Changes :

Bug Fixes :

Cortex 6.3.0
============

Additions :

* Added DeepImageReader abstract base class for reading deep images. DeepImageReader::readPixel returns an individual DeepPixel, while DeepImageReader::read returns a composited ImagePrimitive without depth information.

* Added DeepImageWriter abstract base class for writing deep images.

* Added IECoreHoudini::RATDeepImageReader to read Houdini deep texture files. Supports Deep Camera Maps and Deep Shadow Maps.

* Added IECoreHoudini::RATDeepImageWriter to write Houdini deep texture files. 

* Added DeepImageConverter to convert from one deep image format to another.

* Added initial support for Arnold.

Improvements :

Changes :

Bug Fixes :

Cortex 6.2.0
============

Additions :

* Added DeepPixel to represent arbitrary channel data stored at varying depths in space.

Changes :

* Added face-varying color conversion in FromMayaMeshConverter.

* Added custom space input to FromMayaTransformConverter.

* Allocated a TypeId range for use in the Gaffer project.

* Changed minSequenceSize to 1 for FileSequenceParameters in common sequence utility ops (Sequence*Op)

Bug fixes :

* SOP_ParameterisedHolder properly handles the GIL before using the CapturingRenderer.

* Fixed crashes which could be triggered by passing a python unicode string with non-ascii characters into Cortex.

* Fixed bug with conversion of normals in ToMayaMeshConverter.

Cortex 6.1.2
============

Additions :

* IECoreGL::Renderer class now supports the "gl:visibility:camera" attribute.

Bug fixes :

* PointDistributionOp density parameter no longer accepts negative values.

* RelativePreset was creating unnecessary data for empty class parameters and not working if there was no differences at all.
